# TheShip

./: CMakeLists.txt
res/shaders/: fragment_shader.txt  vertex_shader.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.h
